--- a/roles/k8sprep/tasks/prepare.yaml
+++ b/roles/k8sprep/tasks/prepare.yaml
@@ -35,7 +35,7 @@
 - name: sysctl settings needed for k8s
   sysctl:
     name: "{{ item }}"
-    value: 1
+    value: '1'
     sysctl_set: yes
     reload: yes
   loop:
